--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 * {
     margin: 0;
     padding: 0;
-
 }
 
 body {
@@ -11,6 +10,8 @@ body {
     color: white;
 }
 
+/* Logo and Navigation */
+
 header {
     margin: auto;
     display: flex;
@@ -18,6 +19,8 @@ header {
     align-items: center;
     justify-content: space-between;
     padding-inline: 5%;
+    padding-top: 2%;
+    z-index: 10;
 }
 
 .logo h2 {
@@ -28,5 +31,61 @@ header {
 }
 
 nav a {
+    color: white;
+    text-decoration: none;
+    padding-inline: 1rem;
+    font-size: 20px;
+}
+
+/* Button styling */
+
+.button {
+    border: 2px;
+    border-style: solid;
+    border-color: white;
+    border-radius: 25px;
+    padding-block: 10px;
+    padding-inline: 20px;
+    margin-left: 15px;
+}
+
+/* Intro section */
+
+.intro-section {
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-image:url(/images/header-img.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    height: 1080px;
+    text-align: center;
+    margin-top: -17.05rem;
+}
+
+.intro-section h1 {
+    margin-top: 18rem;
+    font-size: 32px;
+}
+
+.intro-section h2 {
+    font-size: 22px;
+    max-width: 40%;
     
 }
+
+hr {
+    color: white;
+    width: 48rem;
+}
+
+/* Product section */
+
+.products-section {
+    background-color: black;
+    height: 1020px;
+}
+
+
