--- a/style.css
+++ b/style.css
@@ -47,7 +47,10 @@ nav a {
     padding-block: 10px;
     padding-inline: 20px;
     margin-left: 15px;
+    text-decoration: none;
+    color: white;
 }
+
 
 /* Intro section */
 
@@ -84,6 +87,31 @@ hr {
 
 .products-section {
     background-color: black;
+    margin: auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.product-cards {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    flex-direction: column;
+    border: 1px;
+    border-color: red;
+    border-style: solid;
+    height: 33rem;
+    width: 23rem;
+    margin-top: 5rem;
+}
+
+.product-cards h2 {
+    padding-bottom: 13rem;
+}
+
+.product-cards a {
+    margin-bottom: 1rem;
 }
 
 /* Scroll snapper */
@@ -100,3 +128,4 @@ hr {
     height: 100%;
     scroll-snap-align: center;
 }
+
