--- a/style.css
+++ b/style.css
@@ -203,31 +203,43 @@ hr {
     margin: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
-
 }
 
 .feedback-cardsec {
     display: flex;
     flex-direction: row;
+
 }
 
 .feedback-cards {
     display: flex;
     background-color: #D9D9D9;
     align-items: center;
-    flex-direction: row;
-    height: 25rem;
-    width: 25rem;
+    justify-content: center;
+    flex-direction: column;
+    height: 23rem;
+    width: 23rem;
     margin-top: 8rem;
     margin-inline: 3rem;
     border-radius: 20px;
+    color: black;
+    text-align: center;
+    justify-content: space-around;
 }
 
-.galleri-section h2 {
-    padding-top: 5rem;
-    font-size: 4rem;
+
+.feedback-cards img {
+    display: flex;
+    align-items: center;
+    width: 9rem;
+    height: 9rem;
+    border-radius: 50%;
+}
+
+.feedback-text {
+    max-width: 80%;
 }
 
 /* Footer */
@@ -237,6 +249,8 @@ footer {
     flex-direction: column;
     align-items: center;
     opacity: 60%;
+    margin-bottom: 1rem;
+    margin-top: 8rem;
 }
 
 footer hr {
