--- a/feedback.css
+++ b/feedback.css
@@ -1,4 +1,4 @@
-body {
+.feedback {
     background-image:url(/images/woman-card.jpg);
     background-attachment: fixed;
     background-size: 100%;
