--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header {
     font-weight: 400;
     font-style: normal;
     color: white;
+    text-shadow: 2px 4px 6px rgba(0,0,0,0.65);
 }
 
 nav a {
@@ -42,6 +43,7 @@ nav a {
     text-decoration: none;
     padding-inline: 1rem;
     font-size: 20px;
+    text-shadow: 2px 4px 6px rgba(0,0,0,0.75);
 }
 
 /* Button styling */
